<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>viso2</name>
  <version>0.0.1</version>
  <description>
    A ROS2-Wrapper for libviso2, a library for visual odometry, 
    maintained by the Systems, Robotics and Vision group of the 
    University of the Balearic Islands, Spain. http://srv.uib.es
  </description>
  
  <license>GPL</license>

  <url type="website">http://ros.org/wiki/viso2</url>
  <url type="bugtracker">https://github.com/srv/viso2/issues</url>

  <author email="stephan.wirth@uib.es">Stephan Wirth</author>
  <maintainer email="stephan.wirth@uib.es">Stephan Wirth</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>libviso2</exec_depend>
  <exec_depend>viso2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
