<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>viso2_ros</name>
  <version>0.0.1</version>
  <description>This is the ROS2 wrapper for libviso2, library for visual odometry (see package libviso2).</description>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/viso2_ros</url>
  <url type="bugtracker">https://github.com/srv/viso2/issues</url>

  <author email="stephan.wirth@uib.es">Stephan Wirth</author>
  <maintainer email="stephan.wirth@uib.es">Stephan Wirth</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <depend>libviso2</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend> 
  <depend>message_filters</depend> 
  <depend>image_transport</depend>
  <depend>cv_bridge</depend> 
  <depend>image_geometry</depend> 
  <depend>tf2</depend> 
  <depend>libpcl-all-dev</depend>
  <!--<depend>pcl_ros</depend>--> 
  <depend>std_srvs</depend> 

  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>'


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
